nginx-demo/mynginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: dhutsj/nginx:stress
        resources:
          requests:
            memory: "1Gi"
            cpu: "2000m"  # 2 Core
            ephemeral-storage: "2Gi"
          limits:
            memory: "2Gi"
            cpu: "4000m"  # 4 Core
            ephemeral-storage: "4Gi"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
